# rusty-lens

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: csv_parser.rs  error.rs  filters.rs  lib.rs  main.rs  timeline.rs
src/tui/: app.rs  theme.rs  views.rs
tests/: fixture_sample.csv
